# HerkuleX_ROS2

./: CMakeLists.txt  README.md
herkulex/: CMakeLists.txt  package.xml
herkulex/launch/: herkulex.launch.py  herkulex_0602ex_launch.py  herkulex_arm_master_launch.py  herkulex_arm_slave_launch.py  herkulex_pantilt_launch.py
herkulex/msg/: HerkulexInfoRam.msg  MsgHerkulexRam.msg
herkulex/src/: herkulex.cpp  herkulex.h  herkulex_0602_ex.cpp  herkulex_arm_master.cpp  herkulex_arm_slave.cpp  herkulex_pantilt.cpp
herkulex/srv/: HerkulexAngleMove.srv  HerkulexIjogMove.srv  HerkulexPositionMove.srv  HerkulexRegisterCommand.srv  HerkulexSjogMove.srv  PanAngleMove.srv  TiltAngleMove.srv
herkulex_description/: CMakeLists.txt  package.xml
herkulex_description/launch/: herkulex_0602ex_description.launch.py  herkulex_arm_description.launch.py  herkulex_description.launch.py  herkulex_pantilt_description.launch.py
herkulex_description/meshes/: 0602-body.STL  0602-horn.STL  eoc_module.STL  pen_module.STL  pen_tilt_bottom.STL  pen_tilt_bracket.STL  pen_tilt_cover.STL  tilt_module.STL
herkulex_description/rviz/: rviz_arm_settings.rviz  rviz_basic_settings.rviz  rviz_pantilt_settings.rviz
herkulex_description/urdf/: herkulex.xacro  herkulex_arm.xacro  herkulex_pantilt.xacro
launch/: herkulex.launch.py
msg/: HerkulexInfoEep.msg  MsgHerkulexEep.msg
src/: herkulex.cpp
srv/: HerkulexVelocityMove.srv
